19-real-scenarion-argo-cicd/argo-config/argo-rollouts/nginx-ingress.yaml
# Use if the ingress is connecting out of Docker network
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: argo-demo
spec:
  ingressClassName: nginx
  rules:
  - host: argo.demo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 8080
